frontend/src/styles/components/_sign-up.scss
.slideout--signup {
    .slideout__inner {
        padding: 25px 20px;
        @include mq("desktop") {
            width: 498px;
        }

        @include mq("mobile") {
            width: 490px;
        }
    }
    .bed_form {
        // Need to force width outside of container because of scrollbar
        @include mq("desktop") {
            //width: 680px;
            width: 498px;
        }
        @include mq("mobile"){
            width:480px;
            border-radius: 8px;
            background: #FFFFFF;
            border: 1px solid #9A9A9A;
        }
    }
       .ie9 & {
                display:block;
                text-overflow: none;
        }
    .forminvalid {
        border-color: #FF0000;
    }
    .check-wrap {
        border: 2px solid transparent;
        display: inline-block;
        width: 16px;
        height: 16px;
        //float: left;
        margin: 5px 10px 0 0;

        @include mq('mobile') {
            width: 15px;
            height: 15px;
        }

        .lt-ie10 & {
            width: 23px;
            height: 25px;
        }
        .optin {
            border: 0 !important;
        }
    }
    .forminvaliddiv {
        border: 2px solid red;
    }
    &._is_open {
        display: block;
    }
    h2 {

        font-family: font("gill sans", "roman");
        font-size: 26px;
        color: #333E48;
        line-height: 30px;
        padding-bottom: 15px;

        @include mq("mobile") {
            font-size: 48px;
            color: #333E48;
            line-height: 46px;
            padding: 0px 0px;
        }
    }
    h3 {
        
        @include mq("desktop"){
            font-weight: bold;
            font-family: font("gill sans", "roman");
            font-size: 26px;
            color: #333E48;
            line-height: 29px;
        }

        @include mq("mobile");
            font-family: font("gill sans", "roman");
            font-size: 48px;
            color: #333E48;
            line-height: 46px;  

        }
    a {
        //text-decoration: underline;
        color: #51748b;
        &:hover {
            //color: #333e48;
        }
    }

    .red {
        color: #ff0000;
    }
    .required-fields {
        color: #7c8d94;
        font-size: 16px;
        line-height: 18px;

        @include mq("desktop") {
            font-size: 16px;
            padding-bottom: 25px;
            

        }
         @include mq("mobile") {
            font-size: 26px;
            color: #657E8E;
            line-height: 32px;
            margin: 5px 5px; 


        }

    }

    input, select {
        color: #333e48;
        background-color: #fff;
        margin-right: 15px;
        -moz-border-radius:10px; /* Firefox */
        -webkit-border-radius: 10px; /* Safari, Chrome */
        -khtml-border-radius: 10px; /* KHTML */
        -moz-appearance: none;
        border-style: none;
        border-radius: 4px;
        border: 1px solid #9A9A9A;


        @include mq("desktop") {
            width: 440px;
            height: 34px;
            font-size: 15px;
            border-radius: 4px;
            margin-bottom: 8px;

        }
        @include mq("mobile") {
            width: 494px;
            height: 90px;
            font-size: 15px;
            border-radius: 8px;
            margin-bottom: 5px;
            border: 1px solid #9A9A9A;
        }

    em{  
        font-family: font("gill sans", "italic");
        font-size: 16px;
        color: #657E8E;
        line-height: 18px;
    }
        @include mq("mobile") {
            width: 440px;
            height: 78px;
            font-size: 32px;
            font-family: font("gill sans", "italic");
            border-radius: 10px;
            padding-left: 25px;
            margin-bottom: 25px;
        }

        &.placeholder {
            color: #8c8f91;
        }

        @include placeholder {
            color: #8c8f91;
        }

        &.email {
             @include mq("mobile") {
                //width: 494px;
                width: 100%;
            }
       
        }
        &.first-name {


            @include mq("mobile") {
                //width: 494px;
                width: 100%;
            }
        }
        &.last-name {
             @include mq("mobile") {
                //width: 494px;
                width: 100%;
            }
        }
        &.email2{
            @include mq("mobile") {
                //width: 494px;
                width: 100%;
            }
        }
        &.optin {
            width: auto;
            height: auto;
            margin: 0 5px 0 0;
            box-shadow: none;
            float: left;
            font-family: HelveticaNeue;
            font-size: 20px;
            color: #333E48;
            line-height: 26px;

            @include mq('mobile') {
                // increase hit box for checkbox since label is disabled.
                position: relative;

                width: 50px;
                height: 50px;
                margin-top: -20px;
                margin-left: -4px;

                :after {
                    content: '';
                    position: absolute;
                    right: -20px;
                    top: 0;
                    width: 20px;
                    height: 15px;
                }
                :before {
                    content: '';
                    position: absolute;
                    bottom: -20px;
                    left: 0;
                    width: 35px;
                    height: 20px;
                }
            }
        }
        &.submit {
            width: 295px;
            display: block;
            background-color: #333e48;
            color: #febd3f;
            font-family: font("gill sans", "roman");
            border-radius: 4px;
            background: #323E48;
            @include mq("mobile") {
                border-radius: 4px;
                background: #323E48;
                font-size: 32px;
                color: #FFBE2C;
                line-height: 38px;
               
            }
        }
    }
    .processing-gif {
        background-image: url("#{$img-path}/loading-gif.gif");
        width: 50px;
        height: 50px;
        background-size: 50px;
    }
    .check-wrap {
        @include mq('mobile') {
            width: 16px;
            height: 16px;
        }
    }
    .optin-label {
        color: #333e48;
        display: block;

        @include mq('mobile') {

            // Need to allow a regular touch event here to remove focus from form and allow scrolling
            pointer-events: none;
        }
    }
    .optin-privacy {
        color: #333e48;
        display: block;

    }
    sup{
        line-height:1em;
    }

    .dsm5-book {
        background-image: url("#{$img-path}/dsm5-download.png");
        height: 245px;
        width: 193px;
        margin: 15px auto 35px;
    }

    .download {
        width: 295px;
        height: 30px;
        line-height: 30px;
        text-align: center;
        display: block;
        margin: 0 auto;
        background-color: #333e48;
        color: #febd3f;
        font-family: font("gill sans", "roman");
        border-radius: 4px;
        background: #323E48;

        @include mq("mobile") {
            border-radius: 4px;
            background: #323E48;
            font-size: 32px;
            color: #FFBE2C;
            line-height: 38px;
            width: 330px;
            height: 40px;  
        }
    }

    .error-message {
        color: #FF0000;
        display: block;
        font-size: 18px;
    }
}

